--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3955
-      - DATABASE_URL=postgresql://planit:${DB_PASSWORD}@db:5432/planit?schema=public
+      - DATABASE_URL=postgresql://planit:${DB_PASSWORD}@host.docker.internal:5432/planit?schema=public
       - JWT_SECRET=${JWT_SECRET}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
@@ -21,35 +21,6 @@ services:
       - SMTP_PASS=${SMTP_PASS}
       - APP_URL=${APP_URL}
       - ADMIN_EMAIL=${ADMIN_EMAIL}
-    depends_on:
-      db:
-        condition: service_healthy
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
-    networks:
-      - planit-network
-
-  db:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_USER=planit
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=planit
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U planit -d planit"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    networks:
-      - planit-network
-
-volumes:
-  postgres_data:
-
-networks:
-  planit-network:
-    driver: bridge
